chore(package): add {{main}} (exports..) chore(package): (publishConfig) chore(package): (contributors) chore(package): add BSD-2-Clause (license) chore(package): (template) chore(package): add {{main}} (main) chore(package): add false (sideEffects) chore(package): add Aggregates several async iterators into one (description) chore(package): add 0.0.0-semantic-release (version) chore(package): (scripts) chore(package): (devDependencies) chore(package): (repository) chore(package): (bugs) chore(package): add https://github.com/arlac77/aggregate-async-iterator#readme (homepage)

--- a/package.json
+++ b/package.json
@@ -1,7 +1,46 @@
 {
-    "name": "aggregate-async-iterator",
-    "type": "module",
-    "exports": {
-      ".": "./src/aggregate-async-iterator.mjs"
+  "name": "aggregate-async-iterator",
+  "version": "0.0.0-semantic-release",
+  "publishConfig": {
+    "access": "public"
+  },
+  "sideEffects": false,
+  "type": "module",
+  "exports": {
+    ".": "{{main}}"
+  },
+  "description": "Aggregates several async iterators into one",
+  "contributors": [
+    {
+      "name": "Markus Felten",
+      "email": "markus.felten@gmx.de"
     }
+  ],
+  "license": "BSD-2-Clause",
+  "scripts": {
+    "cover": "--overwrite-- c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
+    "test": "ava --timeout 2m",
+    "docs": "--overwrite-- documentation readme {{main}} --section=API",
+    "lint": "--overwrite-- documentation lint {{main}}"
+  },
+  "devDependencies": {
+    "c8": "^7.1.2",
+    "ava": "^3.8.2",
+    "documentation": "^13.0.0",
+    "semantic-release": "^17.0.8"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/arlac77/aggregate-async-iterator.git"
+  },
+  "bugs": {
+    "url": "https://github.com/arlac77/aggregate-async-iterator/issues"
+  },
+  "homepage": "https://github.com/arlac77/aggregate-async-iterator#readme",
+  "template": {
+    "inheritFrom": [
+      "arlac77/template-arlac77-github",
+      "arlac77/template-esm-only"
+    ]
   }
+}
