--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     ".": "./src/aggregate-async-iterator.mjs"
   },
   "description": "Aggregates several async iterators into one",
+  "keywords" : ["asynciterator","aggregate"],
   "contributors": [
     {
       "name": "Markus Felten",
