--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "test:ava": "ava --timeout 2m tests/*.mjs",
     "cover": "c8 -x 'tests/**/*' --temp-directory build/tmp ava --timeout 2m && c8 report -r lcov -o build/coverage --temp-directory build/tmp",
     "docs": "documentation readme ./src/aggregate-async-iterator.mjs --section=API",
-    "lint": "documentation lint ./src/aggregate-async-iterator.mjs"
+    "lint": "npm run lint:docs",
+    "lint:docs": "documentation lint ./src/aggregate-async-iterator.mjs"
   },
   "devDependencies": {
     "ava": "^3.13.0",
