--- a/package.json
+++ b/package.json
@@ -41,7 +41,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/arlac77/aggregate-async-iterator"
+    "url": "git+https://github.com/arlac77/aggregate-async-iterator.git"
   },
   "bugs": {
     "url": "https://github.com/arlac77/aggregate-async-iterator/issues"
