--- a/package.json
+++ b/package.json
@@ -6,8 +6,13 @@
     "provenance": true
   },
   "exports": {
-    ".": "./src/aggregate-async-iterator.mjs"
+    ".": {
+      "types": "./dist/aggregate-async-iterator.d.mts",
+      "default": "./src/aggregate-async-iterator.mjs"
+    }
   },
+  "types": "./dist/aggregate-async-iterator.d.mts",
+
   "description": "Aggregates several async iterators into one (zip)",
   "keywords": [
     "aggregate",
@@ -24,6 +29,7 @@
   ],
   "license": "BSD-2-Clause",
   "scripts": {
+    "prepare": "tsc --allowJs --declaration --emitDeclarationOnly --declarationDir dist -t esnext -m esnext --module nodenext --moduleResolution nodenext ./src**/*.mjs",
     "test": "npm run test:browser-ava && npm run test:ava",
     "test:ava": "ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs",
     "test:browser-ava": "browser-ava --headless --no-keep-open tests/*-ava.mjs tests/*-ava-browser.mjs",
