--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
     "access": "public",
     "provenance": true
   },
-  "types": "./dist/aggregate-async-iterator.d.mts",
+  "types": "./types/aggregate-async-iterator.d.mts",
   "exports": {
     ".": {
-      "types": "./dist/aggregate-async-iterator.d.mts",
+      "types": "./types/aggregate-async-iterator.d.mts",
       "default": "./src/aggregate-async-iterator.mjs"
     }
   },
@@ -28,7 +28,7 @@
   ],
   "license": "BSD-2-Clause",
   "scripts": {
-    "prepare": "tsc --allowJs --declaration --emitDeclarationOnly --declarationDir dist -t esnext -m esnext --module nodenext --moduleResolution nodenext ./src**/*.mjs",
+    "prepare": "tsc --allowJs --declaration --emitDeclarationOnly --declarationDir types -t esnext -m esnext --module nodenext --moduleResolution nodenext ./src**/*.mjs",
     "test": "npm run test:browser-ava && npm run test:ava",
     "test:ava": "ava --timeout 4m tests/*-ava.mjs tests/*-ava-node.mjs",
     "test:browser-ava": "browser-ava --headless --no-keep-open tests/*-ava.mjs tests/*-ava-browser.mjs",
